--- a/index.html
+++ b/index.html
@@ -2,48 +2,73 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Master RG Empire - Mobile Fix</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
+    <title>Master RG - Chat Fix</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         :root { --neon: #00f2ff; --bg: #050505; }
-        * { box-sizing: border-box; }
-        body { background: var(--bg); color: #fff; font-family: sans-serif; margin: 0; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         
-        header { background: #111; padding: 10px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--neon); z-index: 1001; }
-        .m-btn { background: var(--neon); border: none; padding: 7px 12px; border-radius: 5px; font-weight: bold; cursor: pointer; }
-
-        .wrapper { flex: 1; display: flex; position: relative; overflow: hidden; }
-
-        /* الستارات - مخفية بالهاتف وتظهر كطبقة فوق */
-        .side { 
-            position: absolute; top: 0; bottom: 0; width: 250px; background: #0a0a0a; 
-            z-index: 2000; transition: 0.3s ease; padding: 20px; 
+        /* جعل الطول يتكيف مع الموبايل */
+        html, body { 
+            height: 100%; 
+            height: -webkit-fill-available; 
+            margin: 0; padding: 0; overflow: hidden; 
+            background: var(--bg); color: #fff; font-family: sans-serif;
         }
-        #right-s { right: -250px; border-left: 1px solid #222; }
-        #right-s.open { right: 0; }
-        #left-s { left: -250px; border-right: 1px solid #222; }
-        #left-s.open { left: 0; }
+
+        body { display: flex; flex-direction: column; }
+        
+        header { 
+            height: 60px; background: #111; border-bottom: 2px solid var(--neon);
+            display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 1000;
+        }
+
+        .m-btn { background: var(--neon); border: none; padding: 8px 15px; border-radius: 5px; font-weight: bold; cursor: pointer; }
+
+        .main-content { flex: 1; position: relative; display: flex; overflow: hidden; }
 
         /* الشات */
-        #chat { flex: 1; display: flex; flex-direction: column; background: #000; width: 100%; position: relative; }
-        #msgs { flex: 1; padding: 15px; overflow-y: auto; padding-bottom: 80px; }
-
-        /* خانة الكتابة - جعلناها ثابتة وبأعلى طبقة */
-        .input-holder { 
-            position: absolute; bottom: 0; left: 0; right: 0; 
-            background: #111; padding: 12px; display: flex; gap: 8px; 
-            border-top: 1px solid #222; z-index: 1000; 
+        #chat-window { 
+            display: flex; flex-direction: column; width: 100%; height: 100%; background: #000; 
         }
-        input { flex: 1; background: #000; color: #fff; border: 1px solid #333; padding: 12px; border-radius: 25px; outline: none; font-size: 16px; }
-        #send { background: var(--neon); border: none; padding: 0 20px; border-radius: 25px; font-weight: bold; cursor: pointer; }
+
+        #msgs { 
+            flex: 1; overflow-y: auto; padding: 15px; padding-bottom: 20px;
+            display: flex; flex-direction: column; gap: 10px;
+        }
+
+        /* خانة الكتابة - ملتصقة بالأسفل تماماً */
+        .input-bar { 
+            background: #111; padding: 10px 15px; 
+            display: flex; gap: 10px; align-items: center;
+            border-top: 1px solid #222;
+            padding-bottom: env(safe-area-inset-bottom); /* لدعم هواتف الآيفون الجديدة */
+        }
+
+        input { 
+            flex: 1; background: #000; color: #fff; border: 1px solid #333; 
+            padding: 12px 15px; border-radius: 25px; outline: none; font-size: 16px;
+        }
+
+        #send { background: var(--neon); border: none; padding: 10px 20px; border-radius: 25px; font-weight: bold; cursor: pointer; }
+
+        /* الستارات */
+        .side { 
+            position: absolute; top: 0; bottom: 0; width: 280px; background: #0a0a0a; 
+            z-index: 2000; transition: 0.3s ease; padding: 20px; 
+        }
+        #right-s { right: -280px; border-left: 1px solid #222; }
+        #right-s.open { right: 0; }
+        #left-s { left: -280px; border-right: 1px solid #222; }
+        #left-s.open { left: 0; }
 
         .overlay { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.8); z-index: 1500; }
 
         @media (min-width: 900px) {
-            #right-s { right: 0; position: relative; }
-            #left-s { left: 0; position: relative; }
+            #right-s { right: 0 !important; position: relative; }
+            #left-s { left: 0 !important; position: relative; }
             .m-btn { display: none; }
         }
     </style>
@@ -54,20 +79,20 @@
 
 <header>
     <button class="m-btn" onclick="shw('right')">المتصلين</button>
-    <span style="color:var(--neon)">MASTER RG</span>
+    <div style="color:var(--neon); font-weight:bold;">MASTER RG</div>
     <button class="m-btn" onclick="shw('left')">الملف</button>
 </header>
 
-<div class="wrapper">
+<div class="main-content">
     <div id="right-s" class="side">
         <h3 style="color:var(--neon)">المتواجدون</h3>
         <div style="color:gold">👑 الماستر RG</div>
     </div>
 
-    <div id="chat">
+    <div id="chat-window">
         <div id="msgs"></div>
-        <div class="input-holder">
-            <input type="text" id="mInp" placeholder="اكتب هنا...">
+        <div class="input-bar">
+            <input type="text" id="mInp" placeholder="اكتب هنا..." autocomplete="off">
             <button id="send" onclick="send()">إرسال</button>
         </div>
     </div>
@@ -75,7 +100,7 @@
     <div id="left-s" class="side">
         <div style="text-align:center; background:#1a1a1a; padding:15px; border-radius:10px; border:1px solid var(--neon);">
             <img src="https://via.placeholder.com/60" id="myPic" style="width:60px; border-radius:50%; border:2px solid var(--neon);">
-            <div id="myName" style="font-weight:bold; margin-top:5px;">الماستر RG</div>
+            <div id="myName" style="font-weight:bold; margin-top:10px;">الماستر RG</div>
         </div>
     </div>
 </div>
@@ -92,7 +117,7 @@
         const t = document.getElementById('mInp').value;
         const n = localStorage.getItem('rg-n') || "الماستر_RG";
         const i = localStorage.getItem('rg-i') || "https://via.placeholder.com/60";
-        if(t) {
+        if(t.trim()) {
             db.ref('messages').push({ u: n, t: t, i: i });
             document.getElementById('mInp').value = '';
         }
@@ -101,9 +126,16 @@
     db.ref('messages').on('child_added', (snap) => {
         const m = snap.val();
         const div = document.createElement('div');
-        div.style.marginBottom = "15px";
-        div.innerHTML = `<b style="color:var(--neon)">${m.u}:</b> <span>${m.t}</span>`;
+        div.style.background = "#151515";
+        div.style.padding = "10px";
+        div.style.borderRadius = "10px";
+        div.innerHTML = `<b style="color:var(--neon)">${m.u}:</b> <span style="word-break: break-all;">${m.t}</span>`;
         document.getElementById('msgs').appendChild(div);
+        document.getElementById('msgs').scrollTop = document.getElementById('msgs').scrollHeight;
+    });
+
+    // سكرول تلقائي عند فتح الكيبورد
+    window.addEventListener('resize', () => {
         document.getElementById('msgs').scrollTop = document.getElementById('msgs').scrollHeight;
     });
 </script>
